--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -1,8 +1,104 @@
+@article{greevy2004optimal,
+  title={Optimal multivariate matching before randomization},
+  author={Greevy, Robert and Lu, Bo and Silber, Jeffrey H and Rosenbaum, Paul},
+  journal={Biostatistics},
+  volume={5},
+  number={2},
+  pages={263--275},
+  year={2004},
+  publisher={Biometrika Trust}
+}
+
+@article{diehr1995breaking,
+  title={Breaking the matches in a paired t-test for community interventions when the number of pairs is small},
+  author={Diehr, Paula and Martin, Donald C and Koepsell, Thomas and Cheadle, Allen},
+  journal={Statistics in medicine},
+  volume={14},
+  number={13},
+  pages={1491--1504},
+  year={1995},
+  publisher={Wiley Online Library}
+}
+
+
+@article{doi,
+  author = {Greevy, Robert  and Lu, Bo  and Silber, Jeffrey H. and Rosenbaum, Paul },
+  title = {Optimal multivariate matching before randomization},
+  journal = {Biostatistics},
+  volume = {5},
+  number = {2},
+  pages = {263},
+  year = {2004},
+  doi = {10.1093/biostatistics/5.2.263},
+  URL = { + http://dx.doi.org/10.1093/biostatistics/5.2.263},
+  eprint = {/oup/backfile/content_public/journal/biostatistics/5/2/10.1093/biostatistics/5.2.263/2/050263.pdf}
+}
+
+@article{manun1994influence,
+  title={Influence of demographic, socioeconomic and},
+  author={Manun'ebo, Manwela N and Haggerty, Patricia A and Gaie, Muladi Kalen and Ashworth, Ann and Kirkwood, Betty R},
+  journal={Journal of tropical medicine and hygiene},
+  volume={97},
+  pages={31--38},
+  year={1994}
+}
+
+@article{murray2004design,
+  title={Design and analysis of group-randomized trials: a review of recent methodological developments},
+  author={Murray, David M and Varnell, Sherri P and Blitstein, Jonathan L},
+  journal={American journal of public health},
+  volume={94},
+  number={3},
+  pages={423--432},
+  year={2004},
+  publisher={American Public Health Association}
+}
+
+@article{martin1993effect,
+  title={The effect of matching on the power of randomized community intervention studies},
+  author={Martin, Donald C and Diehr, Paula and Perrin, Edward B and Koepsell, Thomas D},
+  journal={Statistics in medicine},
+  volume={12},
+  number={3-4},
+  pages={329--338},
+  year={1993},
+  publisher={Wiley Online Library}
+}
+
+
+
+@online{Shiny, 
+  author  = {RStudio}, 
+  title   = {Shiny by RStudio}, 
+  url     = {https://shiny.rstudio.com/}, 
+  urldate = {2017-05-11}, 
+}
+
 @online{PMVsStrat, 
   author  = {DeLong, Elizabeth and Li, Lingling and Cook, Andrea }, 
   title   = {Pair-Matching vs Stratification in Cluster-Randomized Trials}, 
   url     = {https://www.nihcollaboratory.org/Products/Pairing-vs-stratification_V1.0.pdf}, 
   urldate = {2017-04-28}, 
+}
+
+@article{raab2001balance,
+  title={Balance in cluster randomized trials},
+  author={Raab, Gillian M and Butcher, Izzy},
+  journal={Statistics in medicine},
+  volume={20},
+  number={3},
+  pages={351--365},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{hansen2008covariate,
+  title={Covariate balance in simple, stratified and clustered comparative studies},
+  author={Hansen, Ben B and Bowers, Jake},
+  journal={Statistical Science},
+  pages={219--236},
+  year={2008},
+  publisher={JSTOR}
 }
 
 
@@ -12,6 +108,15 @@
   url     = {https://clinicaltrials.gov/ct2/show/NCT03118232}, 
   urldate = {2017-04-28}, 
 }
+
+@online{SOTrial, 
+  author  = {Platt, Richard}, 
+  title   = {Mupirocin-Iodophor ICU Decolonization Swap Out Trial}, 
+  url     = {https://clinicaltrials.gov/ct2/show/NCT03140423?term=swap+out&rank=1}, 
+  urldate = {2017-05-08}, 
+}
+
+
 
 
 @article{balzer2012match,
@@ -343,15 +448,6 @@
   year={2004},
   publisher={Sage Publications}
 } 
-
-@book{murray1998design,
-  title={Design and analysis of group-randomized trials},
-  author={Murray, David M},
-  volume={29},
-  year={1998},
-  publisher={Oxford University Press, USA}
-}
-
 
 @article{pinheiro2007linear,
   title={Linear and nonlinear mixed effects models},
