--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -9,6 +9,12 @@
   publisher={Biometrika Trust}
 }
 
+@article{nmatch,
+  title={designmatch: Construction of Optimally Matched Samples for Randomized Experiments and Observational Studies that are Balanced and Representative by Design},
+  author={Zubizarreta, J. R. and Kilcioglu, C. },
+  publisher={R package version 0.2.0}
+}
+
 @article{diehr1995breaking,
   title={Breaking the matches in a paired t-test for community interventions when the number of pairs is small},
   author={Diehr, Paula and Martin, Donald C and Koepsell, Thomas and Cheadle, Allen},
